# identity

./: CMakeLists.txt  Dockerfile
.github/workflows/: ci.yml
cmake/: Dependencies.cmake
config/: bsfchat-id.example.toml
src/: main.cpp
src/api/: AccountHandler.cpp  AccountHandler.h  AdminHandler.cpp  AdminHandler.h  OidcHandler.cpp  OidcHandler.h  SsoHandler.cpp  SsoHandler.h
src/core/: Config.cpp  Config.h  IdentityServer.cpp  IdentityServer.h  Logger.cpp  Logger.h
src/crypto/: KeyManager.cpp  KeyManager.h  PasswordHash.cpp  PasswordHash.h  Totp.cpp  Totp.h
src/http/: HttpServer.cpp  HttpServer.h
src/store/: IdentityStore.cpp  IdentityStore.h
tests/: CMakeLists.txt  test_accounts.cpp  test_identity_store.cpp  test_oidc.cpp
web/: admin.html  index.html  login.html  profile.html  register.html
web/css/: style.css
web/js/: app.js
